# S.H.I.F.T

./: .gitignore  ISSUES_TRACKER.md  LOG BOOK.txt  Master Checklist.txt  README.md  System Instructions.txt  devsync.bat  folder_inventory.csv  generate_map_CSV.py  sync.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: gemini-gatekeeper.yml  rust-android-ci.yml  rust-ci.yml
.shift/: CONTEXT.md  audit_report.md  walkthrough.md
DELETED/shift_bootnode/: Cargo.toml
DELETED/shift_bootnode/src/: main.rs
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/com/shift/core/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_app/app/src/main/java/com/shift/core/: MainActivity.kt
android_app/app/src/main/res/values/: themes.xml
android_app/app/src/main/res/values-night/: themes.xml
android_app/app/src/test/java/com/shift/core/: ExampleUnitTest.kt
android_app/gradle/wrapper/: gradle-wrapper.properties
shift_core/: Cargo.toml  build.rs
shift_core/src/: ledger.rs  lib.rs  main.rs  ranging.rs  zk_engine.rs  zk_prover.rs
shift_zkvm/: Cargo.toml
