[package]
name = "shift_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "shift_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "noise", "yamux", "quic", "gossipsub", "kad", "mdns", "identify", "ping", "autonat", "dcutr", "relay", "macros", "tokio"] }
h3o = "0.9.4"
arrayvec = "0.7.4"
android_logger = "0.13.3"
log = "0.4.21"
sha2 = "0.10.8"
hex = "0.4.3"

# The Nova IVC Cryptography Stack
nova-snark = { version = "0.24.0", default-features = false }
bellpepper-core = { version = "0.3.0", default-features = false }
ff = { version = "0.13.0", default-features = false }

# CRITICAL: We explicitly disable default features to kill 'asm'
pasta_curves = { version = "0.5.1", default-features = false, features = ["repr-c"] }