[package]
name = "shift_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "shift_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "noise", "yamux", "quic", "gossipsub", "kad", "mdns", "identify", "ping", "autonat", "dcutr", "relay", "macros", "tokio"] }
h3o = "0.9.4"
arrayvec = "0.7.4"
android_logger = "0.13.3"
log = "0.4.21"
sha2 = "0.10.8"
hex = "0.4.3"
ark-serialize = "^0.4.0"
nix = "0.27.1"
libc = "0.2"

# NEW: Mobile-Safe zkVM Cryptography (Arkworks)
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"