[package]
name = "shift_core"
version = "0.1.0"
edition = "2021"

# ⚡ PHASE 1.6 UPDATE: Removed [lib] cdylib. 
# We are now building a standalone executable for the AVF Type-1 Hypervisor.
[[bin]]
name = "shift_vault"
path = "src/main.rs"

[dependencies]
jni = "0.21.1" # Kept to prevent breaking old imports during the transition
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.53.2", features = ["noise", "yamux", "quic", "gossipsub", "kad", "identify", "ping", "dcutr", "relay", "macros", "tokio"] }
h3o = "0.9.4"
arrayvec = "0.7.4"
android_logger = "0.13.3"
log = "0.4.21"
sha2 = "0.10.8"
hkdf = "0.12.3"
hex = "0.4.3"
ark-serialize = "^0.4.0"

# ⚡ PHASE 1.6: Hypervisor VSOCK & OS Communication
nix = { version = "0.27.1", features = ["socket"] }
libc = "0.2"
serde_json = "1.0"

# NEW: Mobile-Safe zkVM Cryptography (Arkworks)
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
rand_chacha = "0.3.1"

[build-dependencies]
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
rand_chacha = "0.3.1"
ark-serialize = "^0.4.0"