[package]
name = "shift_bootnode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
arrayvec = "0.7"

# PHASE 2.1 UPGRADE: Added tcp, noise, and yamux for robust firewall fallback
libp2p = { version = "0.53", features = ["tokio", "quic", "tcp", "noise", "yamux", "gossipsub", "macros", "kad", "mdns", "autonat", "relay", "dcutr", "identify", "ping"] }